2019년 3월 18일 박신우 2차 커밋
챗봇 기본 인사 어구
챗봇 날씨 안내 기능 구현

--- a/app/src/main/res/menu/bottom_navigation_top.xml
+++ b/app/src/main/res/menu/bottom_navigation_top.xml
@@ -4,8 +4,8 @@
             app:showAsAction="always"
             android:id="@+id/action_home"
             android:enabled="true"
-            android:icon="@drawable/ic_home"
-            android:title="@string/home"
+            android:icon="@drawable/ic_diary"
+            android:title="@string/diary"
     ></item>
 
     <item
