--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_above="@id/signin_layout"
-    />
+            android:layout_marginTop="0dp" android:layout_marginBottom="0dp"/>
 
     <LinearLayout
             android:id="@+id/signin_layout"
