--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,50 +56,16 @@
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
-            android:layout_above="@+id/bottom_navigation_top"
+            android:layout_above="@+id/bottom_navigation"
             android:layout_below="@+id/my_toolbar"
             android:id="@+id/main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
 
-            android:id="@+id/bottom_navigation_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/bottom_navigation_middle"
-            android:layout_alignParentStart="true"
-
-            app:itemBackground="@color/colorWhite"
-            app:itemIconTint="@color/greenTea"
-            app:itemTextColor="@color/greenTea"
-            app:menu="@menu/bottom_navigation_top"
-            android:layout_alignParentLeft="true" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
-            android:layout_marginBottom="0dp">
-
-    </android.support.design.widget.BottomNavigationView>
-
-    <android.support.design.widget.BottomNavigationView
-
-            android:id="@+id/bottom_navigation_middle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            app:itemBackground="@color/colorWhite"
-            app:itemIconTint="@color/greenTea"
-
-            app:itemTextColor="@color/greenTea"
-            app:menu="@menu/bottom_navigation_middle"
-            android:layout_alignParentLeft="true" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
-            android:layout_above="@+id/bottom_navigation_down">
-
-    </android.support.design.widget.BottomNavigationView>
-
-    <android.support.design.widget.BottomNavigationView
-
-            android:id="@+id/bottom_navigation_down"
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -108,7 +74,7 @@
             app:itemIconTint="@color/greenTea"
 
             app:itemTextColor="@color/greenTea"
-            app:menu="@menu/bottom_navigation_down"
+            app:menu="@menu/bottom_navigation"
             android:layout_alignParentLeft="true">
 
     </android.support.design.widget.BottomNavigationView>
