2019년 4월 7일 박신우 4차 커밋
1. 공부방 DB 설계
2. 어린이와 선생님이 주고 받는 메세지(텍스트, 사진) DB에 업로드 기능
3. 다이어리 DB 설계
4. 선생님 답변 꾹 길게 누를시 다이어리 DB에 업로드 기능
   (어린이 이메일이 NULL로 올라가고, 다이어리는 게시글이 하나만 올라가는 오류 존재) -> 해결 필요

--- a/app/src/main/res/layout/activity_teacher.xml
+++ b/app/src/main/res/layout/activity_teacher.xml
@@ -39,6 +39,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+    <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/chatImage"
+            android:src="@drawable/ic_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/chatText"
+            app:layout_constraintStart_toStartOf="parent"
+    />
+
     <EditText
             android:id="@+id/chatText"
             android:layout_width="0dp"
