--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -24,4 +24,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+            android:id="@+id/imagebubble"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+    />
 </android.support.constraint.ConstraintLayout>
