--- a/app/src/main/res/layout/activity_teacher.xml
+++ b/app/src/main/res/layout/activity_teacher.xml
@@ -1,78 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context=".MainActivity">
-
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <ImageView
-                    android:src="@drawable/logo_title"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_height="70dp" />
-        </LinearLayout>
-
-    </android.support.v7.widget.Toolbar>
-
-    <Button
-            android:id="@+id/chat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@color/greenTea"
-            android:text="@string/chat"
-            android:textColor="@android:color/background_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-    <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/chatImage"
-            android:src="@drawable/ic_image"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/chatText"
-            app:layout_constraintStart_toStartOf="parent"
-    />
-
-    <EditText
-            android:id="@+id/chatText"
-            android:layout_width="0dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="16dp"
-            android:ems="10"
-            android:hint="@string/hint_teacher"
-            android:inputType="text"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/chat"
-            app:layout_constraintStart_toStartOf="parent" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".MainActivity" android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/chatText"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/chatText"
+            android:layout_weight="1"/>
+    <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/colorPrimary"/>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintEnd_toStartOf="@+id/chatText"
+    >
+        <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/chatImage"
+                android:src="@drawable/ic_image"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/chatText"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="30dp" android:layout_weight="3" android:cropToPadding="false"/>
+        <EditText
+                android:id="@+id/chatText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/hint_teacher"
+                android:inputType="text"
+                android:imeOptions="actionSend"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/chat"
+                app:layout_constraintStart_toStartOf="parent" android:layout_weight="80"/>
+        <Button
+                android:id="@+id/chat"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:text="@string/chat"
+                android:textColor="@android:color/background_light"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_weight="5"/>
+    </LinearLayout>
+
+</LinearLayout>
