--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -13,7 +13,8 @@
             android:text="@string/chat_bubble"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"/>
 
     <TextView
             android:id="@+id/right_chatbubble"
@@ -23,7 +24,8 @@
             android:text="@string/chat_bubble"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="2dp"/>
 
     <ImageView
             android:id="@+id/imagebubble"
