--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,9 @@
     <color name="violet">#7f51be</color>
     <color name="creamy_violet">#ede0ff</color>
 
-    <color name="colorPrimary">#ededed</color>
-    <color name="colorPrimaryDark">#e1e1e1</color>
-    <color name="colorLightGray">#f1f1f1</color>
+    <color name="colorPrimary">#1ABC9C</color>
+    <color name="colorPrimaryDark">#149077</color>
+    <color name="colorLightGray">#149077</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDivision">#e0e0e0</color>
