다이어리 추가 개선
1. 다이어리 추가 안되던것 개선 -> messageDTOs의 문제로 파악
2. 다이어리에 추가된 메시지옆에 추가됨 표시 (종종 순서가 어긋남)
3. 채팅방 레이아웃 개선(말풍선 Invisible > gone, 말풍선 최대크기 제한)

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".navigation_activity.DiaryActivity">
+        tools:context=".navigation_activity.DiaryFragment">
     <android.support.v7.widget.RecyclerView
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:layout_width="match_parent"
