--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -11,6 +12,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/leftbubble"
             android:text="@string/chat_bubble"
+            android:maxWidth="240dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="2dp"
@@ -22,6 +24,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rightbubble"
             android:text="@string/chat_bubble"
+            android:maxWidth="240dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp" android:layout_marginEnd="8dp"
@@ -35,4 +38,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
     />
+
+    <ImageView
+            android:layout_width="14dp"
+            android:layout_height="17dp"
+            app:srcCompat="@drawable/ic_diary"
+            android:id="@+id/checkImg"
+
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/left_chatbubble"
+            android:layout_marginStart="4dp"
+            app:layout_constraintBottom_toBottomOf="@+id/left_chatbubble"/>
 </android.support.constraint.ConstraintLayout>
