--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -15,7 +15,9 @@
             android:maxWidth="240dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="2dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"/>
 
     <TextView
@@ -27,7 +29,9 @@
             android:maxWidth="240dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"/>
 
     <ImageView
@@ -46,7 +50,29 @@
             android:id="@+id/checkImg"
 
             android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/leftTime"
+            android:layout_marginStart="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/leftTime"/>
+
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/leftTime"
             app:layout_constraintStart_toEndOf="@+id/left_chatbubble"
-            android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/left_chatbubble"/>
+            app:layout_constraintBottom_toBottomOf="@+id/left_chatbubble"
+            android:textSize="10sp"
+            android:layout_marginStart="4dp"/>
+
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rightTime"
+            android:gravity="right"
+            app:layout_constraintBottom_toBottomOf="@+id/right_chatbubble"
+            app:layout_constraintEnd_toStartOf="@+id/right_chatbubble"
+            android:textSize="10sp"
+            android:layout_marginEnd="4dp"/>
+
 </android.support.constraint.ConstraintLayout>
