--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -7,6 +7,51 @@
         android:layout_height="wrap_content">
 
     <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rightTime"
+            android:gravity="right"
+            android:textSize="10sp"
+            android:visibility="visible"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/rightBubbleLayout"
+            app:layout_constraintBottom_toBottomOf="@+id/rightBubbleLayout"
+            />
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/rightBubbleLayout"
+            android:background="@drawable/rightbubble"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+                android:id="@+id/imagebubble"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+        <TextView
+                android:id="@+id/right_chatbubble"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chat_bubble"
+                android:maxWidth="240dp"
+                app:layout_constraintTop_toTopOf="@+id/rightBubbleLayout"
+                app:layout_constraintEnd_toEndOf="@+id/rightBubbleLayout"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintBottom_toBottomOf="@+id/rightBubbleLayout"/>
+    </android.support.constraint.ConstraintLayout>
+
+    <TextView
             android:id="@+id/left_chatbubble"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,29 +65,6 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"/>
 
-    <TextView
-            android:id="@+id/right_chatbubble"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rightbubble"
-            android:text="@string/chat_bubble"
-            android:maxWidth="240dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="2dp"/>
-
-    <ImageView
-            android:id="@+id/imagebubble"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-    />
-
     <ImageView
             android:layout_width="14dp"
             android:layout_height="17dp"
@@ -51,7 +73,7 @@
 
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/leftTime"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/leftTime"/>
 
     <TextView
@@ -62,17 +84,7 @@
             app:layout_constraintStart_toEndOf="@+id/left_chatbubble"
             app:layout_constraintBottom_toBottomOf="@+id/left_chatbubble"
             android:textSize="10sp"
-            android:layout_marginStart="4dp"/>
-
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rightTime"
-            android:gravity="right"
-            app:layout_constraintBottom_toBottomOf="@+id/right_chatbubble"
-            app:layout_constraintEnd_toStartOf="@+id/right_chatbubble"
-            android:textSize="10sp"
-            android:layout_marginEnd="4dp"/>
+            android:layout_marginStart="4dp"
+            android:visibility="visible"/>
 
 </android.support.constraint.ConstraintLayout>
