--- a/app/src/main/res/layout/activity_teacher.xml
+++ b/app/src/main/res/layout/activity_teacher.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               tools:context=".MainActivity" android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,7 +25,7 @@
             android:layout_height="50dp"
             app:layout_constraintEnd_toStartOf="@+id/chatText"
     >
-        <android.support.v7.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/chatImage"
                 android:src="@drawable/ic_image"
                 android:layout_height="match_parent"
