--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -19,7 +19,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/rightBubbleLayout"
             />
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/rightBubbleLayout"
                 android:layout_marginEnd="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/rightBubbleLayout"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
             android:id="@+id/left_chatbubble"
@@ -87,4 +87,4 @@
             android:layout_marginStart="4dp"
             android:visibility="visible"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
