오늘 내기분 구현
일단 얼굴인식이랑 행복도 보이게 구현
-> Firebase에서는 Smile밖에 지원 안함
-> 추후 슬픔, 보통, 행복으로 쓸 수 있어보임

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,13 @@
             android:background="?attr/colorPrimary"
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize"
-            android:id="@+id/toolbar2"/>
+            android:id="@+id/toolbar2"
+            />
 
     <FrameLayout
             android:id="@+id/main_content"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1">
 
     </FrameLayout>
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             app:itemBackground="@color/colorPrimary"
             app:itemIconTint="@drawable/bottom_navigation_selector"
-            app:itemTextColor="@color/colorWhite"
+            app:itemTextColor="@drawable/bottom_navigation_selector"
             app:menu="@menu/bottom_navigation"
             >
 
