다이어리 더보기에 질문한 내용 표시
다이어리 더보기에 질문한 내용 표시
다이어리 피드에 이미지 표시를 위한 뷰 추가

--- a/app/src/main/res/layout/activity_diary_more_view.xml
+++ b/app/src/main/res/layout/activity_diary_more_view.xml
@@ -61,6 +61,32 @@
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/diaryMoreContent"/>"
+            android:id="@+id/diaryMoreContent"/>
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="질문 내용"
+            android:textStyle="bold"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="#000"
+            android:textSize="18dp"
+            android:layout_marginTop="10dp"/>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/colorDivision"
+            android:id="@+id/view2"/>
+
+    <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/diaryMoreQeustion"/>"
     android:id="@+id/diaryMoreContent"/>
 </LinearLayout>
