--- a/app/src/main/res/layout/diary_card.xml
+++ b/app/src/main/res/layout/diary_card.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -85,12 +86,20 @@
                 android:layout_height="match_parent"
                 android:background="#ddd">
 
-            <RelativeLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="16dp"
                     android:background="#fff"
                     android:layout_marginBottom="1dp">
+
+                <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        tools:srcCompat="@tools:sample/avatars"
+                        android:id="@+id/diaryCardImage"
+                        android:layout_marginRight="10dp"
+                        android:visibility="gone"/>
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -99,7 +108,8 @@
                         android:maxLines="2"
                         android:ellipsize="end"
                         android:id="@+id/diaryContent"/>
-            </RelativeLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
