다이어리 사진 표시
다이어리, 다이어리 더보기 사진 표시
내기분 레이아웃 깨지는것 수정

--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -70,7 +70,7 @@
             android:layout_height="17dp"
             app:srcCompat="@drawable/ic_diary"
             android:id="@+id/checkImg"
-
+            android:scaleType="centerCrop"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/leftTime"
             android:layout_marginStart="4dp"
