--- a/app/src/main/res/layout/diary_card.xml
+++ b/app/src/main/res/layout/diary_card.xml
@@ -2,7 +2,6 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -69,17 +68,6 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/rl_image">
-
-            <ImageView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/diaryThumb"/>
-        </RelativeLayout>
-
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -96,10 +84,10 @@
                 <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        tools:srcCompat="@tools:sample/avatars"
-                        android:id="@+id/diaryCardImage"
+                        android:id="@+id/diaryThumb"
+                        android:scaleType="centerCrop"
                         android:layout_marginRight="10dp"
-                        android:visibility="gone"/>
+                        android:visibility="visible"/>
 
                 <TextView
                         android:layout_width="wrap_content"
