지식백과정보표시, 공유기능 구현
선생님 답변에 랜드마크, 사진라벨링 지식백과정보 표시
공유 구현(링크있는건  null이되는거같긴함)

--- a/app/src/main/res/layout/recyclerview_item_design_teacher.xml
+++ b/app/src/main/res/layout/recyclerview_item_design_teacher.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/leftbubble"
             android:text="@string/chat_bubble"
+            android:autoLink="web"
             android:maxWidth="240dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
