--- a/app/src/main/res/layout/activity_diary_more_view.xml
+++ b/app/src/main/res/layout/activity_diary_more_view.xml
@@ -50,6 +50,7 @@
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autoLink="web"
             android:id="@+id/diaryMoreContent"/>
 
     <TextView
